fix: add spacing for banner/site-title and page-content

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -156,7 +156,8 @@ pre {
     max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
     margin-right: auto;
     margin-left: auto;
-    padding: $spacing-unit;
+    padding-left: $spacing-unit;
+    padding-right: $spacing-unit;
     @extend %clearfix;
 
     @include media-query($on-laptop) {
