--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -8,6 +8,7 @@
     position: relative;
 }
 
+#banner {margin-top : 40px }
 .site-title {
     &:hover { text-decoration: none; }
 }
@@ -152,7 +153,7 @@
  * Page content
  */
 .page-content {
-    // padding: $spacing-unit;
+    margin: 40px 0;
 }
 
 /* .page-heading {
@@ -160,7 +161,8 @@
 } */
 
 .post-list {
-    margin-left: 0;
+    float: left;
+    margin: 0;
     list-style: none;
 
     > li {
